fixed buggy code

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   font-size: large;
-  background-color: blue;
+//  background-color: blue;
 }
 
 .App {
